--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+.mvn/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -14,7 +15,7 @@ target/
 *.ipr
 
 ### PVS-Studio ###
-.PVS-Studio/*
+.PVS-Studio/
 
 ### Eclipse ###
 .apt_generated
